# cnc_renamer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
res/: about
src/: build.rs  commands.rs  config.rs  lib.rs  main.rs  reader.rs  registry.rs  ui.rs
src/commands/: install.rs  show_about.rs  show_settings.rs  uninstall.rs
