[package]
name = "cnc_remedy"
version = "1.1.0"
edition = "2024"
build = "src/build.rs"

[[bin]]
name = "cncr"
path = "src/main.rs"

[package.metadata.winres]
ProductName = "CNC Remedy"
FileDescription = "CNC Remedy"
OriginalFilename = "cncr.exe"
LegalCopyright = "dece1ver © 2025"

[dependencies]
crossterm = "0.29.0"
registry = "1.3.0"
is_elevated = "0.1.2"
clearscreen = "4.0.5"
unicode-segmentation = "1.12.0"
chrono = "0.4.44"
toml = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[build-dependencies]
winres = "0.1"
